--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
         <div class="projects">
             <article class="project">
                 <a href="https://vast-sea-42190.herokuapp.com/">
-                <img src="./assets/images/note.png" alt="note taker picture" />
+                <img src="./assets/images/note.png" alt="link to note taker live app" />
                 </a>
                 <div class="project-description">
                     <h3 class="project-name">Note Taker App</h3>
@@ -49,7 +49,7 @@
 
             <article class="project">
                 <a href="https://glacial-ridge-86747.herokuapp.com">
-                <img src="./assets/images/budgetapp.jpeg" alt="budget tracker picture" />
+                <img src="./assets/images/budgetapp.jpeg" alt="link to budget tracker live app" />
                 </a>
                 <div class="project-description">
                     <h3 class="project-name">Budget App</h3>
@@ -60,7 +60,7 @@
 
             <article class="project">
                 <a href="https://desolate-shore-13134.herokuapp.com/">
-                    <img src="./assets/images/blogimage.jpeg" alt="tech blog picture" />
+                    <img src="./assets/images/blogimage.jpeg" alt="link to tech blog live app" />
                 </a>
                 <div class="project-description">
                     <h3 class="project-name">Tech Blog</h3>
